# url-shortener

./: .gitignore  README.md  alembic.ini  pyproject.toml
app/: __init__.py  auth.py  config.py  extensions.py  models.py
app/routes/: analytics.py  shortener.py
migrations/versions/: 47e17e98c268_ceate_apis_table.py  6c2a4f0d8c11_add_unique_constraint_to_apis_user_name.py  be024f86a278_create_urls_table.py  d8acdc2d4c5e_add_indexes_to_clicks_table.py  ef1945fcc87f_initial_schema.py
