[project]
name = "url-shortner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "flask>=3.1.3",
    "flask-limiter>=4.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=25.3.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
]
